Adapt to fabric API changes. Add cost to terminator
